--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -8,7 +8,9 @@ monitor=,preferred,auto,auto
 
 exec-once = waybar
 exec-once = hypridle
-exec-once = copyq --start-server
+exec-once = hyprpaper
+exec-once = wl-paste --type text --watch cliphist store 
+exec-once = wl-paste --type image --watch cliphist store
 
 $terminal = kitty
 $fileManager = dolphin
@@ -16,6 +18,9 @@ $menu = wofi --show drun
 
 env = XCURSOR_SIZE,20
 env = QT_QPA_PLATFORMTHEME,qt6ct
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 input {
     kb_layout = de
@@ -105,7 +110,8 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, M, exec, ~/.config/hypr/power.sh
-bind = $mainMod, V, exec, copyq toggle
+bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod SHIFT, S, exec, flameshot gui
 
 
 # Move focus with mainMod + arrow keys
