--- a/linux-wm/waybar/config.jsonc
+++ b/linux-wm/waybar/config.jsonc
@@ -1,9 +1,22 @@
 {
     "spacing": 4, // Gaps between modules (4px)
-    "modules-left": ["hyprland/workspaces"],
-    "modules-center": ["clock", "custom/player", "idle_inhibitor"],
-    "modules-right": ["tray", "temperature", "network", "backlight", "pulseaudio", "keyboard-state", "battery"],
-    
+    "modules-left": [
+        "hyprland/workspaces"
+    ],
+    "modules-center": [
+        "clock",
+        "custom/player",
+        "idle_inhibitor"
+    ],
+    "modules-right": [
+        "tray",
+        "temperature",
+        "network",
+        "backlight",
+        "pulseaudio",
+        "keyboard-state",
+        "battery"
+    ],
     // Modules configuration
     "hyprland/workspaces": {
         "disable-scroll": false,
@@ -42,12 +55,26 @@
         "critical-threshold": 80,
         // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
+        "format-icons": [
+            "",
+            "",
+            ""
+        ]
     },
     "backlight": {
         // "device": "acpi_video1",
         "format": "{percent}% {icon}",
-        "format-icons": ["", "", "", "", "", "", "", "", ""]
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
     },
     "battery": {
         "states": {
@@ -61,7 +88,13 @@
         "format-alt": "{time} {icon}",
         // "format-good": "", // An empty format will hide the module
         // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
     },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
@@ -86,7 +119,11 @@
             "phone": "",
             "portable": "",
             "car": "",
-            "default": ["", "", ""]
+            "default": [
+                "",
+                "",
+                ""
+            ]
         },
         "on-click": "pavucontrol"
     },
@@ -97,4 +134,3 @@
         "exec": "$HOME/.config/waybar/mediaplayer.sh 2> /dev/null", // Script in resources folder
     }
 }
-
