--- a/linux-wm/hypr/hypridle.conf
+++ b/linux-wm/hypr/hypridle.conf
@@ -5,16 +5,16 @@ general {
 }
 
 listener {
-    timeout = 150                                # 2.5min.
-    on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = brightnessctl -r                 # monitor backlight restor.
+    timeout = 150                               # 2.5min.
+    on-timeout = light -O & light -S 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
+    on-resume = light -I                        # monitor backlight restor.
 }
 
 # turn off keyboard backlight, uncomment this section if have keyboard backlight.
 listener { 
-    timeout = 150                                          # 2.5min.
-    on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
-    on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
+    timeout = 150                               # 2.5min.
+    on-timeout = asusctl -k off                 # turn off keyboard backlight.
+    on-resume = asusctl -k high                 # turn on keyboard backlight.
 }
 
 listener {
@@ -31,4 +31,4 @@ listener {
 listener {
     timeout = 1800                                # 30min
     on-timeout = systemctl suspend                # suspend pc
-}2
+}
