--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -3,6 +3,7 @@
 
 # Monitors
 monitor=eDP-1,preferred,auto,1.666667
+monitor=eDP-2,preferred,auto,1.666667
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
 monitor=,preferred,auto,auto
 
@@ -16,8 +17,9 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
 
-env = XCURSOR_SIZE,20
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
+env = XCURSOR_SIZE,20
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
@@ -26,13 +28,16 @@ input {
     kb_layout = de
     numlock_by_default = 1
 
-
     follow_mouse = 1
     accel_profile = flat
     sensitivity = 1.0
 
     touchpad {
-        natural_scroll = yes
+        natural_scroll = true
+        clickfinger_behavior = true
+        drag_lock = true
+        scroll_factor = 0.5
+        tap-and-drag = true
     }
 }
 
