--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -18,8 +18,9 @@ $fileManager = dolphin
 $menu = wofi --show drun
 
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+#env = GDK_SCALE,1.5
 env = QT_QPA_PLATFORMTHEME,qt6ct
-env = XCURSOR_SIZE,20
+env = XCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
@@ -43,6 +44,10 @@ input {
 
 gestures {
     workspace_swipe = true
+}
+
+xwayland {
+  force_zero_scaling = true
 }
 
 general {
