--- a/linux-wm/hypr/hyprlock.conf
+++ b/linux-wm/hypr/hyprlock.conf
@@ -15,9 +15,9 @@ background {
 
 label {
     monitor =
-    text = Hi there, $USER
+    text = $USER
     color = rgba(200, 200, 200, 1.0)
-    font_size = 40
+    font_size = 70
     font_family = JetBrainsMono Nerd Font
 
     position = 0, 80
@@ -27,15 +27,15 @@ label {
 
 input-field {
     monitor =
-    size = 400, 50
+    size = 500, 50
     outline_thickness = 3
     dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = false
+    dots_center = true
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
+    outer_color = rgb(FAFAFA)
+    inner_color = rgb(151515)
+    font_color = rgb(FFFFFF)
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
