--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -18,7 +18,7 @@ $fileManager = dolphin
 $menu = wofi --show drun
 
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
-#env = GDK_SCALE,1.5
+env = GDK_SCALE,1.5
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = XCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -121,7 +121,7 @@ bind = $mainMod, F, fullscreen,
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, M, exec, ~/.config/hypr/power.sh
 bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
-bind = $mainMod SHIFT, S, exec, flameshot gui
+bind = $mainMod SHIFT, A, exec, grimblast copy area 
 
 
 # Move focus with mainMod + arrow keys
@@ -169,6 +169,6 @@ bindm = $mainMod, mouse:273, resizewindow
 # Special Keys
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 binde=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-binde=, XF86AudioMute, exec, set-mute @DEFAULT_AUDIO_SINK@ toggle toggle
+binde=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle toggle
 binde=, XF86MonBrightnessUp, exec, light -A 5
 binde=, XF86MonBrightnessDown, exec, light -U 5
