--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -1,7 +1,6 @@
 # 9l hyprland config v2
 #
 
-# Monitors
 monitor=eDP-1,preferred,auto,1.666667
 monitor=eDP-2,preferred,auto,1.666667
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
@@ -14,10 +13,10 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 $terminal = kitty
-$fileManager = dolphin
-$menu = wofi --show drun
+$fileManager = nautilus
 
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = MOZ_ENABLE_WAYLAND,1
 env = GDK_SCALE,1.5
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = XCURSOR_SIZE,24
@@ -47,7 +46,7 @@ gestures {
 }
 
 xwayland {
-  force_zero_scaling = true
+  #force_zero_scaling = true
 }
 
 general {
@@ -101,7 +100,7 @@ master {
 misc {
     force_default_wallpaper = 2 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
-windowrule=float,(com.github.hluk.copyq)
+
 windowrule=float,(pavucontrol)
 windowrule=float,title:(Open File)
 windowrule=float,title:(Open Folder)
@@ -109,20 +108,27 @@ windowrulev2 = suppressevent maximize, class:.*
 
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Applications
 bind = $mainMod, return, exec, $terminal
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, D, exec, wofi --show drun
+bind = $mainMod SHIFT, D, exec, wofi --show run
+bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, M, exec, ~/.config/hypr/power.sh
+bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod CTRL, V, exec, cliphist wipe
+bind = $mainMod SHIFT, A, exec, grimblast copy area
+
+# Misc Control
 bind = $mainMod SHIFT, Q, killactive, 
 bind = $mainMod, space, togglefloating, 
-bind = $mainMod, D, exec, $menu
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
-bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, M, exec, ~/.config/hypr/power.sh
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
-bind = $mainMod SHIFT, A, exec, grimblast copy area 
 
+# Example special workspace (scratchpad)
+bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -153,10 +159,6 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
