--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 # 9l hyprland config v2
 #
 
+# Scaling for GA402R
 monitor=eDP-1,preferred,auto,1.666667
 monitor=eDP-2,preferred,auto,1.666667
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
@@ -8,7 +9,7 @@ monitor=,preferred,auto,auto
 
 exec-once = waybar
 exec-once = hypridle
-exec-once = hyprpaper
+exec-once = swww-daemon
 exec-once = wl-paste --type text --watch cliphist store 
 exec-once = wl-paste --type image --watch cliphist store
 
@@ -16,10 +17,11 @@ $terminal = kitty
 $fileManager = nautilus
 
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
-env = MOZ_ENABLE_WAYLAND,1
 env = GDK_SCALE,1.5
+env = MOZ_ENABLE_WAYLAND,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_ENABLE_HIGHDPI_SCALING,1
 env = QT_QPA_PLATFORMTHEME,qt6ct
-env = XCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
@@ -95,10 +97,6 @@ dwindle {
 
 master {
     new_is_master = true
-}
-
-misc {
-    force_default_wallpaper = 2 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
 
 windowrule=float,(pavucontrol)
