--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -16,15 +16,22 @@ exec-once = wl-paste --type image --watch cliphist store
 $terminal = kitty
 $fileManager = nautilus
 
+# Wayland stuff
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
-env = GDK_SCALE,1.5
+env = GDK_BACKEND,wayland,x11
+#env = GDK_SCALE,1.5
+#env = GDK_DPI_SCALE,1
 env = MOZ_ENABLE_WAYLAND,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_ENABLE_HIGHDPI_SCALING,1
-env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORM=wayland;xcb
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+
+# Qt theme
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 input {
     kb_layout = de
@@ -48,12 +55,12 @@ gestures {
 }
 
 xwayland {
-  #force_zero_scaling = true
+    force_zero_scaling = true
 }
 
 general {
     gaps_in = 5
-    gaps_out = 10
+    gaps_out = 7,10,10,10
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -115,9 +122,9 @@ bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, M, exec, ~/.config/hypr/power.sh
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod CTRL, V, exec, cliphist wipe
-bind = $mainMod SHIFT, A, exec, grimblast copy area
+bind = $mainMod SHIFT, S, exec, grimblast copy area
 
-# Misc Control
+# Control
 bind = $mainMod SHIFT, Q, killactive, 
 bind = $mainMod, space, togglefloating, 
 bind = $mainMod, P, pseudo, # dwindle
@@ -125,16 +132,22 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, A, togglespecialworkspace, magic
+bind = $mainMod SHIFT, A, movetoworkspace, special:magic
 
-# Move focus with mainMod + arrow keys
+# Move focus
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+# Move windows
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+
+# Switch workspaces
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -146,23 +159,23 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+# Move active window to a workspace
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
-# Scroll through existing workspaces with mainMod + scroll
+# Scroll through existing workspaces
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# Move/resize windows with mouse
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
