--- a/linux-wm/hypr/hyprlock.conf
+++ b/linux-wm/hypr/hyprlock.conf
@@ -13,17 +13,17 @@ background {
     vibrancy_darkness = 0.0
 }
 
-label {
-    monitor =
-    text = $USER
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 70
-    font_family = JetBrainsMono Nerd Font
-
-    position = 0, 80
-    halign = center
-    valign = center
-}
+#label {
+#    monitor =
+#    text = $USER
+#    color = rgba(200, 200, 200, 1.0)
+#    font_size = 70
+#    font_family = JetBrainsMono Nerd Font
+#
+#    position = 0, 80
+#    halign = center
+#    valign = center
+#}
 
 input-field {
     monitor =
