--- a/linux-wm/waybar/config.jsonc
+++ b/linux-wm/waybar/config.jsonc
@@ -14,7 +14,7 @@
         "network",
         "backlight",
         "pulseaudio",
-        "keyboard-state",
+        // "keyboard-state",
         "battery"
     ],
     // Modules configuration
@@ -56,9 +56,9 @@
         // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
         "format-icons": [
-            "",
             "",
-            ""
+            "",
+            ""
         ]
     },
     "backlight": {
@@ -78,16 +78,13 @@
     },
     "battery": {
         "states": {
-            // "good": 95,
             "warning": 30,
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
+        "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
         "format-icons": [
             "",
             "",
@@ -97,19 +94,18 @@
         ]
     },
     "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
+        "format-ethernet": "{ipaddr}/{cidr} 󰈀",
+        "tooltip-format": "{ifname} via {gwaddr} 󰱓",
+        "format-linked": "{ifname} (No IP) 󰅛",
+        "format-disconnected": "Disconnected 󰲛",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
         "format": "{volume}% {icon} ",
         "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": "0% {icon} ",
+        "format-bluetooth-muted": "Muted {icon} {format_source}",
+        "format-muted": "Muted {icon} ",
         "format-source": "{volume}% ",
         "format-source-muted": "",
         "format-icons": {
@@ -131,6 +127,6 @@
         "format": "{}",
         "max-length": 40,
         "interval": 1, // Remove this if your script is endless and write in loop
-        "exec": "$HOME/.config/waybar/mediaplayer.sh 2> /dev/null", // Script in resources folder
+        "exec": "$HOME/.config/waybar/mediaplayer.sh 2> /dev/null" // Script in resources folder
     }
 }
