replace wofi with anyrun

--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -116,11 +116,11 @@ $mainMod = SUPER
 # Applications
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, D, exec, wofi --show drun
+bind = $mainMod, D, exec, anyrun
 bind = $mainMod SHIFT, D, exec, wofi --show run
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, M, exec, ~/.config/hypr/power.sh
-bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, cliphist list | anyrun --hide-icons true --hide-plugin-info true --show-results-immediately true --plugins libstdin.so | cliphist decode | wl-copy
 bind = $mainMod CTRL, V, exec, cliphist wipe
 bind = $mainMod SHIFT, S, exec, grimblast copy area
 
