--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -7,11 +7,12 @@ monitor=eDP-2,preferred,auto,1.666667
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
 monitor=,preferred,auto,auto
 
-exec-once = waybar
-exec-once = hypridle
 exec-once = swww-daemon
+exec-once = waybar
+exec-once = protonmail-bridge --no-window
 exec-once = wl-paste --type text --watch cliphist store 
 exec-once = wl-paste --type image --watch cliphist store
+exec-once = hypridle
 
 $terminal = kitty
 $fileManager = nautilus
