--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -1,5 +1,4 @@
 # 9l hyprland config v2
-#
 
 # Scaling for GA402R
 monitor=eDP-1,preferred,auto,1.666667
@@ -7,8 +6,10 @@ monitor=eDP-2,preferred,auto,1.666667
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
 monitor=,preferred,auto,auto
 
+
 exec-once = swww-daemon
 exec-once = waybar
+exec-once = ~/.config/hypr/eventhandler.sh
 exec-once = protonmail-bridge --no-window
 exec-once = wl-paste --type text --watch cliphist store 
 exec-once = wl-paste --type image --watch cliphist store
