--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -130,7 +130,7 @@ bind = $mainMod SHIFT, S, exec, grimblast copy area
 bind = $mainMod SHIFT, Q, killactive, 
 bind = $mainMod, space, togglefloating, 
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 
 # Example special workspace (scratchpad)
@@ -142,12 +142,33 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+# Move focus vim-like
+bind = $mainMod, J, movefocus, l
+bind = $mainMod, code:47, movefocus, r
+bind = $mainMod, L, movefocus, u
+bind = $mainMod, K, movefocus, d
 
 # Move windows
 bind = $mainMod SHIFT, left, movewindow, l
 bind = $mainMod SHIFT, right, movewindow, r
 bind = $mainMod SHIFT, up, movewindow, u
 bind = $mainMod SHIFT, down, movewindow, d
+# Move windows vim-like
+bind = $mainMod SHIFT, J, movewindow, l
+bind = $mainMod SHIFT, code:47, movewindow, r
+bind = $mainMod SHIFT, L, movewindow, u
+bind = $mainMod SHIFT, K, movewindow, d
+
+# Resize windows
+bind = $mainMod CTRL, left, resizeactive, -2% 0
+bind = $mainMod CTRL, right, resizeactive, 2% 0 
+bind = $mainMod CTRL, up, resizeactive, 0 -2%
+bind = $mainMod CTRL, down, resizeactive, 0 2%
+# Resize windows vim-like
+bind = $mainMod CTRL, J, resizeactive, -2% 0
+bind = $mainMod CTRL, code:47, resizeactive, 2% 0 
+bind = $mainMod CTRL, L, resizeactive, 0 -2%
+bind = $mainMod CTRL, K, resizeactive, 0 2%
 
 # Switch workspaces
 bind = $mainMod, 1, workspace, 1
