polkit + border color

--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -10,6 +10,7 @@ monitor=,preferred,auto,auto
 exec-once = swww-daemon
 exec-once = waybar
 exec-once = ~/.config/hypr/eventhandler.sh
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = protonmail-bridge --no-window
 exec-once = wl-paste --type text --watch cliphist store 
 exec-once = wl-paste --type image --watch cliphist store
@@ -63,8 +64,8 @@ xwayland {
 general {
     gaps_in = 5
     gaps_out = 7,10,10,10
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    border_size = 3
+    col.active_border = rgba(4444ddee) rgba(44dd44ee) rgba(dd4444ee) 30deg
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
