--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -1,11 +1,11 @@
 # 9l hyprland config v2
 
+
 # Scaling for GA402R
 monitor=eDP-1,preferred,auto,1.666667
 monitor=eDP-2,preferred,auto,1.666667
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
 monitor=,preferred,auto,auto
-
 
 exec-once = swww-daemon
 exec-once = waybar
@@ -21,7 +21,7 @@ $fileManager = nautilus
 
 # Wayland stuff
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
-env = GDK_BACKEND,wayland,x11
+env = GDK_BACKEND,wayland\,x11
 #env = GDK_SCALE,1.5
 #env = GDK_DPI_SCALE,1
 env = MOZ_ENABLE_WAYLAND,1
@@ -64,7 +64,7 @@ xwayland {
 general {
     gaps_in = 5
     gaps_out = 7,10,10,10
-    border_size = 3
+    border_size = 2
     col.active_border = rgba(4444ddee) rgba(44dd44ee) rgba(dd4444ee) 30deg
     col.inactive_border = rgba(595959aa)
 
@@ -101,8 +101,8 @@ animations {
 }
 
 dwindle {
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile = yes
+    preserve_split = yes
 }
 
 master {
@@ -184,16 +184,16 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace
-bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces
 bind = $mainMod, mouse_down, workspace, e+1
