--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -21,7 +21,7 @@ $fileManager = nautilus
 
 # Wayland stuff
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
-env = GDK_BACKEND,wayland\,x11
+env = GDK_BACKEND,wayland,x11
 #env = GDK_SCALE,1.5
 #env = GDK_DPI_SCALE,1
 env = MOZ_ENABLE_WAYLAND,1
@@ -161,15 +161,15 @@ bind = $mainMod SHIFT, L, movewindow, u
 bind = $mainMod SHIFT, K, movewindow, d
 
 # Resize windows
-bind = $mainMod CTRL, left, resizeactive, -2% 0
-bind = $mainMod CTRL, right, resizeactive, 2% 0 
-bind = $mainMod CTRL, up, resizeactive, 0 -2%
-bind = $mainMod CTRL, down, resizeactive, 0 2%
+bind = $mainMod CTRL, left, resizeactive, -5% 0
+bind = $mainMod CTRL, right, resizeactive, 5% 0 
+bind = $mainMod CTRL, up, resizeactive, 0 -5%
+bind = $mainMod CTRL, down, resizeactive, 0 5%
 # Resize windows vim-like
-bind = $mainMod CTRL, J, resizeactive, -2% 0
-bind = $mainMod CTRL, code:47, resizeactive, 2% 0 
-bind = $mainMod CTRL, L, resizeactive, 0 -2%
-bind = $mainMod CTRL, K, resizeactive, 0 2%
+bind = $mainMod CTRL, J, resizeactive, -5% 0
+bind = $mainMod CTRL, code:47, resizeactive, 5% 0 
+bind = $mainMod CTRL, L, resizeactive, 0 -5%
+bind = $mainMod CTRL, K, resizeactive, 0 5%
 
 # Switch workspaces
 bind = $mainMod, 1, workspace, 1
