--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -1,11 +1,14 @@
 # 9l hyprland config v2
 
 
-# Scaling for GA402R
-monitor=eDP-1,preferred,auto,1.666667
-monitor=eDP-2,preferred,auto,1.666667
+# eDP-2 is for GA402R
+$zephyr = eDP-2,preferred,auto,1.666667
+monitor=$zephyr
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
 monitor=,preferred,auto,auto
+
+bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-2, disable"
+bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor $zephyr
 
 exec-once = swww-daemon
 exec-once = waybar
