--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -7,8 +7,9 @@ monitor=$zephyr
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
 monitor=,preferred,auto,auto
 
-bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-2, disable"
-bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor $zephyr
+# Breaks sleep when only monitor!!!
+#bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-2, disable"
+#bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor $zephyr
 
 exec-once = swww-daemon
 exec-once = waybar
