--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -2,9 +2,10 @@
 
 
 # eDP-2 is for GA402R
-$zephyr = eDP-2,preferred,auto,1.666667
+$zephyr = eDP-2,preferred,0x0,1.666667
 monitor=$zephyr
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
+monitor=desc:GWD ARZOPA 000000000000,preferred,1536x0,1.25
 monitor=,preferred,auto,auto
 
 # Breaks sleep when only monitor!!!
@@ -77,7 +78,7 @@ general {
 }
 
 decoration {
-    rounding = 7
+    rounding = 12
     
     blur {
         enabled = true
@@ -114,6 +115,7 @@ master {
 }
 
 windowrule=float,(pavucontrol)
+windowrule=float,(blueberry)
 windowrule=float,title:(Open File)
 windowrule=float,title:(Open Folder)
 windowrulev2 = suppressevent maximize, class:.*
@@ -186,6 +188,8 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+bind = $mainMod, code:20, workspace, 11
+bind = $mainMod, code:21, workspace, 12
 
 # Move active window to a workspace
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -198,6 +202,8 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod, code:20, movetoworkspace, 11
+bind = $mainMod, code:21, movetoworkspace, 12
 
 # Scroll through existing workspaces
 bind = $mainMod, mouse_down, workspace, e+1
