--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -32,7 +32,7 @@ env = GDK_BACKEND,wayland,x11
 env = MOZ_ENABLE_WAYLAND,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_ENABLE_HIGHDPI_SCALING,1
-env = QT_QPA_PLATFORM=wayland;xcb
+env = QT_QPA_PLATFORM,wayland
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
