upgrades people, upgrades!

--- a/linux-wm/hypr/hyprland.conf
+++ b/linux-wm/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 
 
 # eDP-2 is for GA402R
-$zephyr = eDP-2,preferred,0x0,1.666667
+$zephyr = eDP-2,preferred,auto,1.666667
 monitor=$zephyr
 monitor=desc:HP Inc. HP X34 6CM25210CS,preferred,-1536x-250,1
 monitor=desc:GWD ARZOPA 000000000000,preferred,1536x0,1.25
@@ -77,19 +77,23 @@ general {
     allow_tearing = false
 }
 
+misc {
+    vfr = true
+}
+
 decoration {
-    rounding = 12
+    rounding = 10
     
     blur {
         enabled = true
         size = 3
-        passes = 1
+        passes = 2
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    drop_shadow = false # yes
+    #shadow_range = 4
+    #shadow_render_power = 3
+    #col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -139,6 +143,7 @@ bind = $mainMod, space, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
+bind = $mainMod, G, exec, ~/.config/hypr/prodmode.sh
 
 # Example special workspace (scratchpad)
 bind = $mainMod, A, togglespecialworkspace, magic
